ArgoCD/Database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: macarious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: macarious25siv/orange:mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql  # MySQL's data directory
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
        
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: macarious
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
