ArgoCD/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-app
  namespace: macarious
spec:
  podSelector:
    matchLabels:
      app: mysql 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: orangeapp 
    ports:
    - protocol: TCP
      port: 3306
